cart test implementation